updated swagger definition
