# services/Hangout/api/swagger.yaml
@@ -12,7 +12,13 @@ definitions:
     - email
     - name
     type: object
-  dto.StandardResponseBuilder:
+  dto.StandardResponse:
+    properties:
+      data: {}
+      message:
+        type: string
+      status:
+        type: string
     type: object
   dto.UserCreateRequest:
     properties:
@@ -51,11 +57,11 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/dto.StandardResponseBuilder'
+            $ref: '#/definitions/dto.StandardResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.StandardResponseBuilder'
+            $ref: '#/definitions/dto.StandardResponse'
       summary: Sign up
       tags:
       - auth
@@ -77,11 +83,11 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/dto.StandardResponseBuilder'
+            $ref: '#/definitions/dto.StandardResponse'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.StandardResponseBuilder'
+            $ref: '#/definitions/dto.StandardResponse'
       summary: Create user
       tags:
       - users
